--- a/chatrooms/package.json
+++ b/chatrooms/package.json
@@ -4,6 +4,7 @@
     "description": "chat-rooms-server",
     "dependencies": {
         "mime": "^2.5.0",
+        "redis": "^3.0.2",
         "socket.io": "^3.1.0"
     }
 }
