--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "version": "1.0.0",
     "description": "node-language-programming",
     "dependencies": {
+        "formidable": "^1.2.2",
         "fs": "0.0.1-security",
         "htmlparser": "^1.7.7",
+        "mysql": "^2.18.1",
         "nimble": "0.0.2",
         "request": "^2.88.2"
     },
