--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
         "formidable": "^1.2.2",
         "fs": "0.0.1-security",
         "htmlparser": "^1.7.7",
+        "mongodb": "^3.6.4",
         "mysql": "^2.18.1",
         "nimble": "0.0.2",
         "pg": "^8.5.1",
+        "redis": "^3.0.2",
         "request": "^2.88.2"
     },
     "main": "./chatrooms/servrt.js"
